<resources>
    <string name="app_name">GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery Item</string>
    <string name="hint_quantity">Quantity</string>
    <string name="save_title">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
</resources>
