<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/sure_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/noButton"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/textAlert"
                android:text="@string/no"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/yesButton"
                android:layout_alignParentRight="true"
                android:background="@color/colorPrimary"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/textAlert"
                android:text="@string/yes"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>